--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi@0.128.0
-httpx@0.28.1
-hishel[httpx]@1.1.8
-anysqlite@0.0.5
-uvicorn@0.40.0
-pytest@9.0.2
-pytest-cov@7.0.0
+fastapi==0.128.0
+httpx==0.28.1
+hishel[httpx]==1.1.8
+anysqlite==0.0.5
+uvicorn==0.40.0
+pytest==9.0.2
+pytest-cov==7.0.0
